--- a/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-hal-rest-api/pom.xml
+++ b/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-hal-rest-api/pom.xml
@@ -119,6 +119,11 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
