--- a/activiti-services/activiti-services-audit/activiti-services-audit-jpa/src/test/resources/application-producer-test.properties
+++ b/activiti-services/activiti-services-audit/activiti-services-audit-jpa/src/test/resources/application-producer-test.properties
@@ -15,8 +15,5 @@
 #
 #
 spring.application.name=test-app
-spring.cloud.stream.bindings.historyConsumer.destination=historyConsumer
-spring.cloud.stream.bindings.historyConsumer.group=audit
-spring.cloud.stream.bindings.historyConsumer.contentType=application/json
-spring.cloud.stream.bindings.historyProducer.destination=historyConsumer
-spring.cloud.stream.bindings.historyProducer.contentType=application/json
+spring.cloud.stream.bindings.producer.destination=engineEvents
+spring.cloud.stream.bindings.producer.contentType=application/json
