--- a/activiti-spring-boot/spring-boot-samples/spring-boot-sample-hal-rest-api/src/main/resources/application.properties
+++ b/activiti-spring-boot/spring-boot-samples/spring-boot-sample-hal-rest-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.cloud.stream.bindings.myCmdResults.group=myCmdGroup
 spring.cloud.stream.bindings.myCmdResults.contentType=application/json
 spring.cloud.stream.bindings.myCmdProducer.destination=commandConsumer
 spring.cloud.stream.bindings.myCmdProducer.contentType=application/json
-spring.cloud.stream.bindings.auditProducer.destination = historyConsumer
+spring.cloud.stream.bindings.auditProducer.destination = engineEvents
 spring.cloud.stream.bindings.auditProducer.contentType=application/json
 keycloak.auth-server-url=http://localhost:8180/auth
 keycloak.realm=springboot
