Rename packages and classes form history to audit

--- a/activiti-services/activiti-services-audit/activiti-services-audit-jpa/pom.xml
+++ b/activiti-services/activiti-services-audit/activiti-services-audit-jpa/pom.xml
@@ -171,7 +171,7 @@
 
           <packages>
             <package>org.activiti.services.core.model</package>
-            <package>org.activiti.services.history.events</package>
+            <package>org.activiti.services.audit.events</package>
           </packages>
           <classes>
             <class>org.springframework.http.ResponseEntity</class>
