working with cmd results

--- a/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter/src/test/resources/application-test.properties
+++ b/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter/src/test/resources/application-test.properties
@@ -1,4 +1,5 @@
 spring.application.name=test-app
+spring.cloud.stream.default.contentType=application/json
 spring.cloud.stream.bindings.myCmdResults.destination=commandResults
 spring.cloud.stream.bindings.myCmdResults.group=myCmdGroup
 spring.cloud.stream.bindings.myCmdResults.contentType=application/json
