--- a/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter/pom.xml
@@ -40,6 +40,10 @@
       <artifactId>spring-boot-starter-hateoas</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.hateoas</groupId>
       <artifactId>spring-hateoas</artifactId>
     </dependency>
